--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,10 @@
-.App {
+body {
   font-family: sans-serif;
   text-align: center;
+}
+.middle {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  transform: translate(50%, 20%);
 }
