--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,31 @@
 body {
   font-family: sans-serif;
   text-align: center;
+  background-color: #000;
 }
 .middle {
   position: absolute;
   top: 50%;
-  left: 20%;
-  transform: translate(50%, 20%);
+  transform: translate(190px, -90px);
+}
+
+.text {
+  color: white;
+  text-transform: uppercase;
+  font-size: 60px;
+  text-align: center;
+  letter-spacing: 14px;
+}
+
+.text::before,
+.text::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.text::before {
 }
