--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 .text {
-  color: white;
+  color: #fff;
   text-transform: uppercase;
   font-size: 60px;
   text-align: center;
@@ -25,7 +25,38 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: -1;
 }
 
 .text::before {
+  color: #ff00c1;
+  animation: glitch-effect 3s infinite ease-in;
+}
+
+.text::after {
+  color: #3498db;
+  animation: glitch-effect 2s infinite ease-out;
+}
+
+@keyframes glitch-effect {
+  0% {
+    left: -2px;
+    top: -2px;
+  }
+  25% {
+    left: 2px;
+    top: 0px;
+  }
+  50% {
+    left: -1px;
+    top: 2px;
+  }
+  75% {
+    left: 1px;
+    top: -1px;
+  }
+  100% {
+    left: 0px;
+    top: -2px;
+  }
 }
